<resources>
    <string name="app_name">沃付宝3.0</string>
    <string name="content_description">找不到图片</string>

    <string name="sale">消费</string>
    <string name="balance">余额查询</string>
    <string name="quit">退出</string>
    <string name="back">返回</string>
    <string name="Title">提示</string>
    <string name="ok">确认</string>
    <!-- 系统管理 -->

    <string name="net_disconnect">网络已断开</string>
    <string name="net_connecting">网络连接中</string>
    <string name="net_connected">网络已连接</string>
    <string name="merchant_id">商户编号:</string>
    <string name="terminal_id">终端编号:</string>
    <string name="trace">流水号:</string>
    <string name="batch">批次号:</string>
    <string name="max_trans_num">最大交易笔数:</string>
    <string name="other_comm_para">其它通讯参数</string>
    <string name="comm_type">通讯方式：</string>
    <string name="apn">APN业务参数：</string>
    <string name="user_name">用户名：</string>
    <string name="user_pwd">用户密码：</string>
    <string name="local_ip">本地IP：</string>
    <string name="subnet_mask">子网掩码：</string>
    <string name="gateway">网关：</string>
    <string name="tpdu">TPDU</string>
    <string name="time_out">交易超时时间</string>
    <string name="down_key">母POS导入密钥</string>
    <string name="set_mk_index">密钥索引号：</string>
    <string name="input_key">手工输入主密钥：</string>
    <string name="key_index">主密钥索引：</string>
    <string name="pin_pad_type">密码键盘类型:</string>

    <!-- 密码管理 -->
    <string name="old_pwd">请输入原密码：</string>
    <string name="new_pwd1">请输入新密码：</string>
    <string name="new_pwd2">请再次输入新密码：</string>
    <string name="dhcp">使用DHCP</string>
    <string name="oper">操作员号码：</string>
    <string name="password">密码：</string>
    <string name="fill_parent">fill_parent</string>

    <!-- 按钮文字 -->
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="error">错误</string>
    <string name="save">保存</string>
    <string name="button_width">170dip</string>
    <string name="button_height">60dip</string>
    <string name="scan_wifi">扫描网络</string>
    <string name="comm_warnning">该通讯方式用于Socket网络但传输过程中不检查链路状态仅适合测试。</string>

    <string name="recharge_way">选择支付方式</string>

    <!-- 公交充值 -->
    <string name="bus_recharge">公交充值</string>
    <string name="phone_fail_code">错误代码</string>
    <string name="phone_fail_reason">错误原因</string>
    <string name="buscard_type">充值卡类型</string>
    <string name="buscard_balance">卡 内 余 额</string>
    <string name="bus_phone_number">手 机 号 码</string>
    <string name="buscardID">充 值 卡 号</string>
    <string name="buscardType">卡类型</string>
    <string name="rechargebefore_amount">充值前金额</string>
    <string name="rechargeend_amount">充值后金额</string>
    <string name="recharge_amount_warn">注意:在小票打印之前请勿将公交卡拿开</string>
    <string name="input_phone_hint">请输入您的手机号</string>
    <string name="recharge_amount">充值金额</string>
    <string name="result_success">交易成功!</string>
    <string name="result_fail">交易失败!</string>
    <string name="serial_number">系统流水号</string>
    <string name="fail_reason">原因: </string>
    <string name="telephone_recharge">固话充值</string>
    <string name="recharge_type">充值类型</string>
    <string name="telephone_type1">电信固话</string>
    <string name="telephone_type2">联通固话</string>
    <string name="telephone_type3">移动固话</string>
    <string name="mobilephone_type3">电信手机</string>
    <string name="mobilephone_type2">联通手机</string>
    <string name="mobilephone_type1">移动手机</string>
    <string name="mobilephone_amount1">10.00</string>
    <string name="mobilephone_amount2">20.00</string>
    <string name="mobilephone_amount3">30.00</string>
    <string name="mobilephone_amount4">50.00</string>
    <string name="mobilephone_amount5">100.00</string>
    <string name="mobilephone_amount6">200.00</string>
    <string name="mobilephone_amount7">300.00</string>
    <string name="mobilephone_amount8">500.00</string>
    <string name="mobilephone_recharge_type">充值类型</string>
    <string name="input_telephone_hint">请输入您的固话号码</string>
    <string name="input_phone_number_hint">请输入您要充值的手机号</string>
    <string name="confirm_number">确认号码：</string>
    <string name="input_confirm_number_hint">请再次输入手机号码</string>
    <string name="input_confirm_telenumber_hint">请再次输入固话号码</string>
    <string name="telephone_number">固话号码</string>
    <string name="mobilephone_recharge">手机充值</string>
    <string name="transaction_type">交易类型</string>
    <string name="recharge_phone_number">充值号码</string>
    <string name="pay_card_number">支付卡号</string>
    <string name="phone_number">手机号码：</string>
    <string name="pay_amount">支付金额</string>
    <!-- 水电煤缴费 -->
    <string name="utilities_payment">水电煤缴费</string>
    <string name="account">户\t\t\t\t\t\t\t号:</string>
    <string name="input_account_hint">请输入您的卡号</string>
    <string name="input_confirm_account_hint">请输入您的卡号</string>
    <string name="input_phonenumber">请输入您的手机号码</string>
    <string name="payment_item">缴费项目:</string>
    <string name="distince">出账机构:</string>
    <string name="province">地\t\t\t区:</string>
    <string name="payment_unitName">单位名称:</string>
    <string name="pay_money">预存金额:</string>
    <string name="input_money">请输入预存金额</string>
    <string name="phonenumber">手机号码:</string>

    <!-- 加油卡充值 -->
    <string name="gascard_recharge">加油卡充值</string>
    <string name="cardId_racharge">充值卡号</string>
    <string name="confirmCardId">确认卡号</string>
    <string name="phoneNumber">手机号码</string>
    <string name="editErrorHint">请输入正确的信息</string>
    <string name="editMoneyHint">请选择正确的金额</string>
    <string name="rechargeError">充值失败</string>
    <string name="printBill">交易成功，稍后为您打印账单，请注意查看</string>
    <string name="printErrorBill">交易金额会在两个工作日中退还</string>
    <string name="fail">失败</string>
    <string name="title_activity_bus_queary">BusQuearyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_violation">ViolationActivity</string>

    <!-- 游戏充值 -->

    <string-array name="tx_games">
        <item>Q币</item>
        <item>QQ会员</item>
        <item>黄钻</item>
        <item>蓝钻</item>
        <item>红钻</item>
        <item>粉钻</item>
        <item>绿钻</item>
        <item>QQ音速</item>
        <item>DNF黑钻</item>
        <item>QQ飞车紫钻</item>
    </string-array>

    <string name="game_pay">游戏直充</string>
    <string name="game_tx_qb">Q币</string>
    <string name="game_tx_qd">Q点</string>
    <string name="game_tx_qhuiyuan">QQ会员</string>
    <string name="game_tx_DNF">DNF黑钻</string>
    <string name="game_tx_lanzuan">蓝钻</string>
    <string name="game_tx_hongzuan">红钻</string>
    <string name="game_tx_huangzuan">黄钻</string>
    <string name="game_tx_lvzuan">绿钻</string>
    <string name="game_tx_fenzuan">粉钻</string>
    <string name="game_pay_type">充值项目</string>
    <string name="title_activity_screen">ScreenActivity</string>

    <!-- 彩票种类 -->
    <string name="lotter">彩票</string>
    <string name="shuangseqiu">双色球</string>
    <string name="fucai3D">3D</string>
    <string name="qilecai">七乐彩</string>
    <string name="daletou">大乐透</string>
    <string name="qixingcai">七星彩</string>
    <string name="pailie3">排列三</string>
    <string name="pailie5">排列五</string>
    <string name="title_activity_choose">ChooseActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_credit">CreditActivity</string>

    <!-- 信用卡还款 -->
    <string name="credit_card">卡\t号:</string>
    <string name="confirm_card">确认卡号：</string>
    <string name="credit_card_hide">请输入信用卡号</string>
    <string name="credit_idCard">身  份  证:</string>
    <string name="credit_idCard_hide">请输入身份证号</string>
    <string name="credit_name">姓        名:</string>
    <string name="credit_name_hide">请输入姓名</string>
    <string name="credit_cvn">cvn  号:</string>
    <string name="credit_cvn_hide"> 卡背面的cvn2三位数字</string>
    <string name="credit_date">有效期:</string>
    <string name="credit_date_hide">年在前月在后</string>

    <string name="pay_native">温馨提示:扫码完成后需点击"已完成支付"!</string>
</resources>
